Fix deployment: Remove empty files and add health check path

--- a/render.yaml
+++ b/render.yaml
@@ -15,4 +15,5 @@ services:
       - key: NEO4J_USER
         sync: false
       - key: NEO4J_PASSWORD
-        sync: false 
+        sync: false
+    healthCheckPath: /health 
