--- a/railway/requirements.txt
+++ b/railway/requirements.txt
@@ -1,1 +1,9 @@
-flask==3.0.0 
+flask==2.0.1
+werkzeug==2.0.1
+python-dotenv==0.19.0
+neo4j==4.4.0
+openai==0.27.0
+ezdxf==0.17.2
+ifcopenshell==0.6.0
+PyPDF2==2.10.0
+gunicorn==20.1.0 
