--- a/railway/requirements.txt
+++ b/railway/requirements.txt
@@ -6,4 +6,8 @@ openai==0.27.0
 ezdxf==0.17.2
 ifcopenshell==0.6.0
 PyPDF2==2.10.0
-gunicorn==20.1.0 
+gunicorn==20.1.0
+sentry-sdk==1.5.0
+pytest==7.0.0
+pytest-cov==3.0.0
+coverage==6.3.2 
