--- a/render.yaml
+++ b/render.yaml
@@ -2,8 +2,9 @@ services:
   - type: web
     name: cad-parser-api
     env: python
+    rootDir: render
     buildCommand: pip install -r requirements.txt
-    startCommand: cd render && python server.py
+    startCommand: gunicorn server:app
     plan: free
     envVars:
       - key: FLASK_ENV
