--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,7 @@ services:
     env: python
     rootDir: render
     buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn --chdir render server:app
+    startCommand: gunicorn wsgi:app
     plan: free
     envVars:
       - key: FLASK_ENV
