--- a/render.yaml
+++ b/render.yaml
@@ -17,4 +17,14 @@ services:
         sync: false
       - key: NEO4J_PASSWORD
         sync: false
-    healthCheckPath: /health 
+      - key: DATABASE_URL
+        fromDatabase:
+          name: cad-parser-db
+          property: connectionString
+    healthCheckPath: /health
+
+databases:
+  - name: cad-parser-db
+    databaseName: cad_parser
+    user: cad_parser_user
+    plan: free 
