--- a/render/requirements.txt
+++ b/render/requirements.txt
@@ -7,4 +7,7 @@ neo4j==5.17.0
 ezdxf==1.1.3
 ifcopenshell==0.7.0
 PyPDF2==3.0.1
-gunicorn==21.2.0 
+gunicorn==21.2.0
+psycopg2-binary==2.9.9
+SQLAlchemy==2.0.27
+Flask-SQLAlchemy==3.1.1 
