--- a/render.yaml
+++ b/render.yaml
@@ -9,6 +9,8 @@ services:
     envVars:
       - key: FLASK_ENV
         value: production
+      - key: PYTHONPATH
+        value: ${PYTHONPATH}:${PWD}
       - key: OPENAI_API_KEY
         sync: false
       - key: NEO4J_URI
