--- a/render.yaml
+++ b/render.yaml
@@ -11,6 +11,8 @@ services:
         value: production
       - key: PYTHONPATH
         value: ${PYTHONPATH}:${PWD}
+      - key: PORT
+        value: 10000
       - key: OPENAI_API_KEY
         sync: false
       - key: NEO4J_URI
