--- a/render.yaml
+++ b/render.yaml
@@ -13,6 +13,8 @@ services:
         value: ${PYTHONPATH}:${PWD}
       - key: PORT
         value: 10000
+      - key: FLASK_APP
+        value: server.py
       - key: OPENAI_API_KEY
         sync: false
       - key: NEO4J_URI
