--- a/src/render.yaml
+++ b/src/render.yaml
@@ -2,19 +2,19 @@ services:
   - type: web
     name: cad-parser-api
     env: python
-    rootDir: render
+    rootDir: .
     buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn server:app
+    startCommand: python app.py
     plan: free
     envVars:
       - key: FLASK_ENV
         value: production
       - key: PYTHONPATH
-        value: ${PYTHONPATH}:${PWD}
+        value: ${PWD}
       - key: PORT
         value: 10000
       - key: FLASK_APP
-        value: server.py
+        value: app.py
       - key: OPENAI_API_KEY
         sync: false
       - key: NEO4J_URI
