--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,5 +1,5 @@
-flask
-werkzeug
+flask==3.0.2
+werkzeug==3.0.1
 sentry-sdk==1.40.4
 python-dotenv==1.0.1
 openai==1.12.0
@@ -8,5 +8,5 @@ ezdxf==1.1.3
 PyPDF2==3.0.1
 gunicorn==21.2.0
 psycopg2-binary==2.9.9
-SQLAlchemy==2.0.27
-Flask-SQLAlchemy==3.1.1 
+SQLAlchemy==2.0.23
+Flask-SQLAlchemy==3.0.5 
