--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -4,6 +4,7 @@ sentry-sdk==1.40.4
 python-dotenv==1.0.1
 openai==1.12.0
 neo4j==5.17.0
+py2neo==2021.2.4
 ezdxf==1.1.3
 PyPDF2==3.0.1
 gunicorn==21.2.0
