--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -10,4 +10,6 @@ PyPDF2==3.0.1
 gunicorn==21.2.0
 psycopg2-binary==2.9.9
 SQLAlchemy==1.4.53
-Flask-SQLAlchemy==3.0.5 
+Flask-SQLAlchemy==3.0.5
+
+File Upload → Parse → Clean → PostgreSQL (Staging) → Neo4j (Graph Analytics) 
