--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -13,3 +13,7 @@ SQLAlchemy==1.4.53
 Flask-SQLAlchemy==3.0.5
 
 File Upload → Parse → Clean → PostgreSQL (Staging) → Neo4j (Graph Analytics) 
+
+NEO4J_URI=bolt://localhost:7687
+NEO4J_USER=neo4j
+NEO4J_PASSWORD=your_password_here 
