--- a/render/requirements.txt
+++ b/render/requirements.txt
@@ -1,13 +1,10 @@
-flask==3.0.2
-werkzeug==3.0.1
-sentry-sdk==1.40.4
-python-dotenv==1.0.1
-openai==1.12.0
-neo4j==5.17.0
-ezdxf==1.1.3
-ifcopenshell==0.7.0
-PyPDF2==3.0.1
-gunicorn==21.2.0
+Flask==2.3.3
+Flask-CORS==4.0.0
 psycopg2-binary==2.9.9
-SQLAlchemy==2.0.27
-Flask-SQLAlchemy==3.1.1 
+pandas==2.1.4
+numpy==1.24.3
+openai==1.3.0
+python-dotenv==1.0.0
+gunicorn==21.2.0
+ezdxf==1.1.3
+PyPDF2==3.0.1 
