--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,18 @@
 Flask==2.3.3
-Werkzeug==2.3.7
-ezdxf==1.1.1
-ifcopenshell==0.6.0.221122
+Flask-CORS==4.0.0
+psycopg2-binary==2.9.9
+pandas==2.1.4
+numpy==1.24.3
+openai==1.3.0
+python-dotenv==1.0.0
+gunicorn==21.2.0
+ezdxf==1.1.3
 PyPDF2==3.0.1
+ifcopenshell==0.6.0.221122
 pypdf==3.17.1
 Pillow==10.0.1
-numpy==1.24.3
 openai==1.3.5
-neo4j==5.14.1
 sentry-sdk==1.38.0
-python-dotenv==1.0.0
 requests==2.31.0
 typing-extensions==4.8.0
 OCP==7.7.0
