--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,13 +1,8 @@
-flask==3.0.2
-werkzeug==3.0.1
-sentry-sdk==1.40.4
-python-dotenv==1.0.1
-openai==1.12.0
-neo4j==5.17.0
-py2neo==2021.2.4
-ezdxf==1.1.3
-PyPDF2==3.0.1
-gunicorn==21.2.0
+Flask==2.3.3
+Flask-CORS==4.0.0
 psycopg2-binary==2.9.9
-SQLAlchemy==1.4.53
-Flask-SQLAlchemy==3.0.5 
+pandas==2.1.4
+numpy==1.24.3
+openai==1.3.0
+python-dotenv==1.0.0
+gunicorn==21.2.0 
