--- a/render.yaml
+++ b/render.yaml
@@ -17,16 +17,18 @@ services:
         value: app.py
       - key: OPENAI_API_KEY
         sync: false
-      - key: NEO4J_URI
-        sync: false
-      - key: NEO4J_USER
-        sync: false
-      - key: NEO4J_PASSWORD
-        sync: false
       - key: DATABASE_URL
         fromDatabase:
           name: cad-parser-db
           property: connectionString
+      - key: DB_HOST
+        value: ep-white-waterfall-a85g0dgx-pooler.eastus2.azure.neon.tech
+      - key: DB_NAME
+        value: neondb
+      - key: DB_USER
+        value: neondb_owner
+      - key: DB_PASSWORD
+        value: npg_CcgA0kKeYVU2
     healthCheckPath: /health
 
 databases:
