chore: update Dockerfiles for all microservices to install requirements, set PYTHONPATH, and run main.py by default

--- a/MICROSERVICE_ENGINES/ne-dag-alpha/Dockerfile
+++ b/MICROSERVICE_ENGINES/ne-dag-alpha/Dockerfile
@@ -1,5 +1,7 @@
 FROM python:3.11-slim
 WORKDIR /app
 COPY . /app
-RUN pip install --no-cache-dir networkx
-CMD ["python", "-c", "print('ne-dag-alpha container ready')"] 
+COPY ../shared /app/shared
+ENV PYTHONPATH="${PYTHONPATH}:/app/shared"
+RUN pip install --no-cache-dir -r requirements.txt
+CMD ["python", "main.py"] 
