feat: add SFDE container to Phase 2 microservices with deterministic utility-based logic

--- a/MICROSERVICE_ENGINES/docker-compose.yml
+++ b/MICROSERVICE_ENGINES/docker-compose.yml
@@ -26,4 +26,13 @@ services:
       - ./outputs:/outputs
       - ./shared:/shared:ro
       - ./pulse:/pulse:ro
+    working_dir: /app
+
+  sfde:
+    build: ./sfde
+    volumes:
+      - ./inputs:/inputs:ro
+      - ./outputs:/outputs
+      - ./shared:/shared:ro
+      - ./pulse:/pulse:ro
     working_dir: /app 
