--- a/MICROSERVICE_ENGINES/docker-compose.yml
+++ b/MICROSERVICE_ENGINES/docker-compose.yml
@@ -35,4 +35,12 @@ services:
 #      - ./outputs:/outputs
 #      - ./shared:/shared:ro
 #      - ./pulse:/pulse:ro
-#    working_dir: /app 
+#    working_dir: /app
+
+  ne-graph-runtime-engine:
+    build: ./ne-graph-runtime-engine
+    volumes:
+      - ./inputs:/inputs:ro
+      - ./outputs:/outputs
+    working_dir: /app
+    command: python main.py 
