--- a/requirements.txt
+++ b/requirements.txt
@@ -16,4 +16,16 @@ sentry-sdk==1.38.0
 requests==2.31.0
 typing-extensions==4.8.0
 OCP==7.7.0
-opencascade-python==7.7.0 
+opencascade-python==7.7.0
+
+# Security
+PyJWT==2.8.0
+cryptography==42.0.5
+redis==5.0.3
+python-jose[cryptography]==3.3.0
+passlib[bcrypt]==1.7.4
+python-multipart==0.0.9
+secure==0.3.0
+
+# AWS SDK for remote backups
+boto3==1.34.69 
