--- a/requirements.txt
+++ b/requirements.txt
@@ -30,4 +30,14 @@ twilio==8.15.0
 phonenumbers==8.13.31  # For phone number validation
 
 # AWS SDK for remote backups
-boto3==1.34.69 
+boto3==1.34.69
+
+# Performance Testing
+websockets==12.0
+aiohttp==3.9.3
+psutil==5.9.8
+numpy==1.26.4
+pandas==2.2.1
+dgl==2.0.0
+torch==2.2.1
+tqdm==4.66.2 
