Add deployment readiness and security testing:
- Add container orchestration testing
- Add ECM audit trail validation
- Add database security testing
- Add monitoring and logging stack
- Add network isolation
- Add volume persistence checks

--- a/requirements.txt
+++ b/requirements.txt
@@ -32,6 +32,11 @@ phonenumbers==8.13.31  # For phone number validation
 # AWS SDK for remote backups
 boto3==1.34.69
 
+# Deployment Testing
+docker==7.0.0
+websockets==12.0
+aiohttp==3.9.3
+
 # Performance Testing
 websockets==12.0
 aiohttp==3.9.3
