Implement 5 Focused Validation Tests for Code Quality Improvement
🎯 NEW FOCUSED VALIDATION TEST SUITE:

🔹1. Smoke Test (Containers)
   - Docker-compose service validation
   - Health endpoint checks (/healthz, /status)
   - Fatal log pattern detection
   - Container orchestration verification

🔹2. Node Test
   - V01_ProductComponent simulation
   - evaluate_manufacturing validation
   - .dictionary() structure verification
   - Expected keys assertion (node_id, functor_type, inputs, outputs, state, timestamp)

🔹3. Mini DAG Test Callbacks
   - V01_Component → V02_Assembly → V05_Quality chain
   - Sequential functor execution
   - Downstream value resolution validation
   - Callback chain integrity testing

🔹4. Persistence Test
   - PostgreSQL node storage/retrieval
   - Dictionary comparison validation
   - Data integrity verification
   - Database round-trip testing

🔹5. Routing Test
   - route_to_node functionality validation
   - V03_Router_Source → V04_Target communication
   - Inter-node data transfer verification
   - Target execution confirmation

IMPLEMENTATION DETAILS:
- test_focused_validation.py: Complete test suite with detailed reporting
- run_focused_tests.py: Simple test runner script
- FOCUSED_VALIDATION_TESTS.md: Comprehensive documentation
- Enhanced requirements.txt with pytest dependency
- JSON report generation with timestamped results
- Docker client integration with error handling
- PostgreSQL connectivity with environment variable support
- Comprehensive logging and error reporting

EXPECTED PERFORMANCE:
- Total execution time: 25-45 seconds
- Individual test timeouts: 5-30 seconds per test
- Automated report generation: JSON format with detailed metrics
- CI/CD pipeline integration ready

These tests directly address the 5 improvement areas requested and provide
comprehensive validation of container orchestration, node functionality,
callback chains, data persistence, and routing mechanisms.

--- a/requirements.txt
+++ b/requirements.txt
@@ -45,4 +45,9 @@ numpy==1.26.4
 pandas==2.2.1
 dgl==2.0.0
 torch==2.2.1
-tqdm==4.66.2 
+tqdm==4.66.2
+
+# Focused Validation Tests
+pytest==7.4.4 
+# Focused Validation Tests
+pytest==7.4.4
