--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -98,7 +98,7 @@ jobs:
           DATABASE_URL: postgresql://testuser:testpass@localhost:5432/testdb
           REDIS_URL: redis://localhost:6379/0
         run: |
-          pytest -v --cov=. --cov-report=xml
+          pytest tests/ -v --cov=. --cov-report=xml
           
       - name: Upload coverage reports
         uses: codecov/codecov-action@v3
