--- a/requirements.txt
+++ b/requirements.txt
@@ -51,3 +51,47 @@ tqdm==4.66.2
 pytest==7.4.4 
 # Focused Validation Tests
 pytest==7.4.4
+
+# Existing dependencies
+fastapi>=0.104.1
+uvicorn[standard]>=0.24.0
+websockets>=12.0
+strawberry-graphql>=0.215.0
+python-socketio>=5.10.0
+aiofiles>=23.2.1
+pydantic>=2.5.0
+jinja2>=3.1.2
+python-multipart>=0.0.6
+redis>=5.0.0
+requests>=2.31.0
+asyncio-mqtt>=0.16.1
+
+# Core system dependencies
+numpy>=1.24.0
+pandas>=2.0.0
+scipy>=1.10.0
+networkx>=3.1
+matplotlib>=3.7.0
+seaborn>=0.12.0
+plotly>=5.14.0
+
+# Database and storage
+psycopg2-binary>=2.9.6
+sqlalchemy>=2.0.0
+alembic>=1.11.0
+
+# Testing and development
+pytest>=7.4.0
+pytest-asyncio>=0.21.0
+pytest-cov>=4.1.0
+black>=23.7.0
+flake8>=6.0.0
+
+# Machine learning (optional)
+torch>=2.0.0
+transformers>=4.30.0
+scikit-learn>=1.3.0
+
+# Documentation
+sphinx>=7.1.0
+sphinx-rtd-theme>=1.3.0
